# customer-support-gym

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  DATA_SCHEMA.md  LICENSE  PRD.md  README.md  REWARD_SPEC.md  TASKS.md  __init__.py  baseline.py  client.py  conftest.py  models.py  openenv.yaml  pyproject.toml  verify.py
data/: knowledge_base.json  policies.json  tickets.json
openenv/: __init__.py
openenv/core/: __init__.py  client.py  environment.py  models.py
server/: Dockerfile  __init__.py  app.py  environment.py  grader.py  requirements.txt  ticket_generator.py  tool_router.py
tests/: conftest.py  test_environment.py  test_grader.py
